Fix notification icon position/alignment

--- a/assets/styles/extras.css
+++ b/assets/styles/extras.css
@@ -40,16 +40,19 @@
   padding: 0px !important;
   border-radius: 5px;
   border: 2px solid #1BCC8C;
+  position: relative;
 }
 .unseen-notification {
   background-color: #baefdc;
 }
-.bigicon {
+.notification-icon {
   float: left;
+  left: 0;
   font-size: 2.5em;
   line-height: 0.5;
-  margin: 0.215em 0.153em 0.6em 0.6em;
+  margin: 0.1em;
   opacity: 0.30;
+  position: absolute;
 }
 .green {
   color: green;
